--- a/app/assets/css/components/datatable.scss
+++ b/app/assets/css/components/datatable.scss
@@ -1,5 +1,5 @@
 table.datatable {
-    @apply relative min-w-full border-collapse divide-y divide-slate-200 text-sm;
+    @apply relative min-w-full border-collapse divide-y divide-slate-200 text-xs md:text-sm table-fixed;
 
     thead {
         tr {
